--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -4,12 +4,14 @@
 
 <div class="row">
   <div class="col">
-      <dbz-list [characterList]="characters"></dbz-list>
+
+
+      <dbz-list [characterList]="characters" (onDelete)="onDeleteCharacter($event)" ></dbz-list>
 
 
   </div>
   <div class="col">
 
-     <dbz-character></dbz-character>
+     <dbz-character (onNewCharacter)="onNewCharacter($event)"></dbz-character>
   </div>
 </div>
